<resources>
    <string name="app_name">His Cycle Guide</string>
    <string name="logo">Logo</string>

    <string name="landing_title_01">View menstrual calendar</string>
    <string name="landing_title_02">Receive reminders</string>
    <string name="landing_title_03">Preferred alert times</string>
    <string name="landing_desc_01">Stay up to date with the menstrual\ncycle of your partner</string>
    <string name="landing_desc_02">Receive reminders and follow up with\nall menstrual events</string>
    <string name="landing_desc_03">Schedule preferred reminders and\nnotification times</string>
    <string name="landing_image">Landing Image</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="finish">Finish</string>
    <string name="background">background</string>
    <string name="sign_in">Sign in</string>
    <string name="sample_email">abc@email.com</string>
    <string name="your_password">Your password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="btnarrow">btnArrow</string>
    <string name="or_login_with">or login with</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="don_t_you_have_an_account">Don\'t you have an account?</string>
    <string name="back">back</string>
    <string name="full_name">Full name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="sign_up">Sign up</string>
    <string name="or_singup_with">or singup with</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="spouse_information">Spouse Information</string>
    <string name="please_enter_the_name_and_last_menstrual_start_date_of_your_spouse">Please enter the name and last menstrual start date of your spouse</string>
    <string name="last_menstrual_start">Last Menstrual start</string>
    <string name="how_to_find_your_wife_s_last_start_date"><u>How to find your wife’s last start date?</u></string>
    <string name="continue_">Continue</string>
    <string name="profile">Profile</string>
    <string name="prediction">Prediction</string>
    <string name="articles">Insights</string>
    <string name="articles_title">Article</string>
    <string name="calendar">Calendar</string>
    <string name="_29th">29th</string>
    <string name="october_2021">October 2021</string>
    <string name="input_field_1">Input field 1</string>
    <string name="input_field_2">Input field 2</string>
    <string name="log_wife_s_mood">Log Wife\'s Mood</string>
    <string name="happy">Happy</string>
    <string name="sad">Sad</string>
    <string name="calender_view">Calender View</string>
    <string name="emoji">emoji</string>
    <string name="today">Today</string>
    <string name="_12_october_2021">12 October, 2021</string>
    <string name="your_wife_is_in_good_mood">Your wife is in good mood!</string>
    <string name="your_wife_is_in_ovulation_mood">Your wife is in ovulation mood!</string>
    <string name="your_wife_is_in_menstruation_mood">Your wife is in menstruation mood!</string>
    <string name="see_predictions">See Predictions</string>
    <string name="_15th_october_2021">15th October 2021</string>
    <string name="her_body">Her body</string>
    <string name="her_emotions">Her Emotions</string>
    <string name="your_actions">Your Actions</string>
    <string name="read_more">Read More</string>
    <string name="the_impact_of_nmenstrual_symptoms_non_everyday_life">The impact of\nmenstrual symptoms\non everyday life</string>
    <string name="by_jone_doe">By Jone Doe</string>
    <string name="mark_as_read">Mark as read</string>
    <string name="ovulation">Ovulation</string>
    <string name="menstruation">Menstruation</string>
    <string name="dot">dot</string>
    <string name="_1st_oct_2021">1st Oct, 2021</string>
    <string name="setting">Settings</string>
    <string name="notification">Notification</string>
    <string name="edit_your_notification_preferences">Edit your Notification preferences</string>
    <string name="pin_lock">Pin lock?</string>
    <string name="enable_and_set_a_pin_lock">Enable and set a pin lock</string>
    <string name="edit_period_date">Edit Period Date</string>
    <string name="edit_period_start_date_of_your_partner">Edit period start date of your partner</string>
    <string name="last_start_date">Last start date</string>
    <string name="set_wife_s_last_menstrual_start_date">Set wife\'s last Menstrual start date</string>
    <string name="edit_period_start_date">Edit Period Start Date</string>
    <string name="period">Period</string>
    <string name="_12">12</string>
    <string name="save">Save</string>
    <string name="emptyName">Empty user name</string>
    <string name="emptyEmail">Empty your email</string>
    <string name="invalidEmail">Invalid your email</string>
    <string name="invalidPass">Invalid your password</string>
    <string name="notMatchPass">Not matched password</string>
    <string name="frequence_mood">Frequence Mood</string>
    <string name="spouse_name">Spouse name</string>
    <string name="progressTitle">His Cycle Guide</string>
    <string name="progressDetail">Please wait</string>
    <string name="emptySpouseName">Empty spouse name</string>
    <string name="emptyMoodDate">Empty menstrual date</string>
    <string name="_28">28</string>
    <string name="emptyFrequence">Empty frequence value</string>
    <string name="invalidFrequence">Invalid frequence</string>
    <string name="notVerifyEmail">We just sent a verification email. After confirm, please try that again</string>
    <string name="notifications">Notifications</string>
    <string name="notify_me_when_jessica_is_starting_her">Notify me when Jessica is starting her:</string>
    <string name="ovulation_phase">Ovulation phase</string>
    <string name="menstrual_phase">Menstrual phase</string>
    <string name="luteal_phase">Luteal phase</string>
    <string name="follicular_phase">Follicular phase</string>
    <string name="select_when_to_be_notified">Select when to be notified</string>
    <string name="_3_days_before">3 days before her start date</string>
    <string name="_2_days_before">2 days before her start date</string>
    <string name="_1_days_before">1 day before her start date</string>
    <string name="estimated_start">On her estimated start date</string>
    <string name="select_time_to_be_notified">Select time to be notified</string>
    <string name="select_time">Select Time</string>
    <string name="welcome_to_hiscycleguide">Welcome To HisCycleGuide</string>
    <string name="submit">Submit</string>
    <string name="hint_enter_email">Enter email</string>
    <string name="cancel">Cancel</string>
    <string name="error">Error</string>
    <string-array name="brew_array">
        <item>Cappuccino</item>
        <item>Espresso</item>
        <item>Mocha</item>
        <item>Caffè Americano</item>
        <item>Cafe Zorro</item>
    </string-array>
</resources>