<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="30dp"
    android:orientation="vertical"
    tools:context=".activity.SettingActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="@dimen/margin_20"
        android:contentDescription="@string/back"
        android:onClick="onClickLogin"
        android:src="@drawable/ic_back" />

    <TextView
        style="@style/txtLoginTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="@dimen/margin_20"
        android:text="@string/setting" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_4"
        android:layout_marginTop="@dimen/margin_30"
        android:layout_marginBottom="@dimen/margin_8"
        app:cardCornerRadius="@dimen/radius_16">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_20"
            android:layout_marginVertical="@dimen/margin_16"
            android:orientation="vertical">

            <TextView
                style="@style/txt_600_16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notification"
                android:textColor="@color/textColor" />

            <TextView
                style="@style/txt_400_12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_your_notification_preferences"
                android:textColor="@color/textColor" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_4"
        android:layout_marginVertical="@dimen/margin_8"
        app:cardCornerRadius="@dimen/radius_16">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_20"
            android:layout_marginVertical="@dimen/margin_16"
            android:orientation="vertical">

            <TextView
                style="@style/txt_600_16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pin_lock"
                android:textColor="@color/textColor" />

            <TextView
                style="@style/txt_400_12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enable_and_set_a_pin_lock"
                android:textColor="@color/textColor" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_4"
        android:layout_marginVertical="@dimen/margin_8"
        app:cardCornerRadius="@dimen/radius_16"
        android:onClick="onClickPeriod">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_20"
            android:layout_marginVertical="@dimen/margin_16"
            android:orientation="vertical">

            <TextView
                style="@style/txt_600_16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_period_date"
                android:textColor="@color/textColor" />

            <TextView
                style="@style/txt_400_12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_period_start_date_of_your_partner"
                android:textColor="@color/textColor" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>