<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <ImageView
        android:id="@+id/iv_landing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/img_landing_01"
        android:contentDescription="@string/landing_image"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <TextView
        android:id="@+id/tv_landing_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/landing_title_01"
        style="@style/txtLandingTitle"/>

    <TextView
        android:id="@+id/tv_landing_desc"
        android:layout_marginTop="@dimen/margin_12"
        android:layout_marginBottom="@dimen/margin_60"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/landing_desc_01"
        style="@style/txtLandingDesc" />

</LinearLayout>